<resources>
    <string name="app_name">Hello KEPA</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Contacts</string>
    <string name="tab_text_3">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="designation">Designation</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_credits">Credits</string>
    <string name="developed_with_u2661_by_sidharth_v">Developed with ♡ by Sidharth V</string>
    <string name="government_engineering_college_thrissur">Government Engineering College, Thrissur</string>
    <string name="kepa_district_committee_2016_18">KEPA District Committee 2016-18</string>
    <string name="kpakepatcr_gmail_com">kpakepatcr@gmail.com</string>
    <string name="kepa_logo">KEPA logo</string>
    <string name="_7558821477">7558821477</string>
</resources>
