<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kepared"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context="com.sidharth.hellokpa.Credits">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30sp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="232dp"
            android:layout_height="226dp"
            app:srcCompat="@drawable/kepa"
            android:layout_gravity="center"
            android:layout_marginTop="16sp"
            android:contentDescription="@string/kepa_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8sp"
            android:text="@string/kepa_district_committee_2016_18"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="email"
            android:text="@string/kpakepatcr_gmail_com"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="0sp"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developed_with_u2661_by_sidharth_v"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/government_engineering_college_thrissur"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8sp"
            android:autoLink="phone"
            android:text="@string/_7558821477"
            android:textAlignment="center"
            android:textColor="@android:color/white"

            android:textColorLink="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>
